[workspace.package]
version = "0.9.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/amphitheatre-app/amphitheatre"
authors = [
    "Eguo Wang <wangeguo@gmail.com>",
]

[workspace]
resolver = "2"
members = [
    "apiserver",
    "controllers",
    "crdgen",
    "resolver",
    "resources",
    "syncer",
    "workflow",
]

# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-workspacedependencies-table
[workspace.dependencies]
amp-builder = { path = "builder" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.9.5" }
amp-resolver = { path = "resolver" }
amp-resources = { path = "resources" }
amp-workflow = { path = "workflow" }
anyhow = "1.0.95"
async-nats = "0.38.0"
async-trait = "0.1.83"
axum = { version = "0.7.9" }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.31"
k8s-metrics = "0.20.0"
k8s-openapi = { version = "0.24.0", default-features = false, features = ["schemars", "latest"] }
kube = { version = "0.98.0", default-features = false, features = ["runtime", "derive", "rustls-tls"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34+deprecated"
sha2 = "0.10.8"
tar = "0.4.43"
tempfile = "3.14.0"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8.15"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
utoipa = { version = "5.3.0", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "8.1.0", features = ["axum", "reqwest"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
