[workspace.package]
version = "0.11.11"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/amphitheatre-app/amphitheatre"
authors = [
    "Eguo Wang <wangeguo@gmail.com>",
]

[workspace]
resolver = "2"
members = [
    "apiserver",
    "builder",
    "controllers",
    "crdgen",
    "resolver",
    "resources",
    "syncer",
    "workflow",
]

# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-workspacedependencies-table
[workspace.dependencies]
amp-builder = { path = "builder" }
amp-common = { git = "https://github.com/amphitheatre-app/common", tag = "v0.10.7" }
amp-resolver = { path = "resolver" }
amp-resources = { path = "resources" }
amp-workflow = { path = "workflow" }
anyhow = "1"
async-nats = "0.45"
async-trait = "0.1"
axum = { version = "0.8" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
futures = "0.3"
k8s-metrics = { git = "https://github.com/amphitheatre-app/k8s-metrics-rs" }
k8s-openapi = { version = "0.26", default-features = false, features = ["schemars", "latest"] }
kube = { version = "2.0.1", default-features = false, features = ["runtime", "derive", "rustls-tls"] }
lazy_static = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.9"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
