[package]
name = "amp-apiserver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Amphitheatre API Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "amphitheatre"
path = "src/lib.rs"

[dependencies]
amp-common.workspace = true
amp-resources.workspace = true
anyhow.workspace = true
async-nats.workspace = true
axum = { version = "0.7.5" }
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-stream = "0.1"
tokio.workspace = true
tower-http = { version = "0.5.2", features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa = { version = "4.1.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
