[package]
name = "amp-apiserver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Amphitheatre API Server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "amphitheatre"
path = "src/lib.rs"

[dependencies]
amp-common.workspace = true
amp-resources.workspace = true
anyhow.workspace = true
async-nats.workspace = true
axum.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
uuid.workspace = true
