[package]
name = "amp-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true

amp-common.workspace = true
amp-resources.workspace = true

kube.workspace = true
k8s-openapi.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
