[package]
name = "amp-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Common library for the Amphitheatre platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
k8s-openapi = { workspace = true, optional = false }
serde = { workspace = true, optional = false }
serde_json = { workspace = true, optional = false }
serde_yaml = { workspace = true, optional = false }
url = { workspace = true, optional = false }
