[package]
name = "amp-controllers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "K8s CRD controllers for the Amphitheatre platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common.workspace = true
amp-resources.workspace = true
amp-workflow.workspace = true
anyhow.workspace = true
async-nats.workspace = true
chrono.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
