[package]
name = "amp-crdgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate CRDs for the Amphitheatre platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common = { workspace = true, optional = false }
clap = { workspace = true, optional = false }
kube = { workspace = true, optional = false }
serde = { workspace = true, optional = false }
serde_yaml = { workspace = true, optional = false }

[dev-dependencies]
tempfile = "3.10.0"
