[package]
name = "amp-crdgen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generate CRDs for the Amphitheatre platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common.workspace = true
clap.workspace = true
kube.workspace = true
serde_yaml.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
