[package]
name = "amp-crds"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Custom Resource Definitions for the Amphitheatre platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "amp-crdgen"
path = "src/main.rs"

[dependencies]
convert_case = "0.6.0"
kube = { workspace = true, optional = false }
k8s-openapi = { workspace = true, optional = false }
serde = { workspace = true, optional = false }
serde_json = { workspace = true, optional = false }
serde_yaml = { workspace = true, optional = false }
schemars = "0.8.11"
validator = { version = "0.16.0", features = ["derive"] }