[package]
name = "amp-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dependency Resolution"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common = { workspace = true, optional = false }
amp-resources = { workspace = true, optional = false }
kube = { workspace = true, optional = false }
k8s-openapi = { workspace = true, optional = false }
thiserror = { workspace = true, optional = false }
toml = "0.8"
tracing = { workspace = true, optional = false }
url = { workspace = true, optional = false }
