[package]
name = "amp-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dependency Resolution"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common.workspace = true
amp-resources.workspace = true
kube.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
