[package]
name = "amp-resources"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "K8s resources manager for the Amphitheatre platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common.workspace = true
anyhow.workspace = true
k8s-metrics = "0.19.0"
k8s-openapi.workspace = true
kube.workspace = true
lazy_static.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2 = "0.10.8"
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
