[package]
name = "amp-syncer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Receive file change events and implement changes to the file system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
