[package]
name = "amp-syncer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Receive file change events and implement changes to the file system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-common.workspace = true
async-nats.workspace = true
clap.workspace = true
dotenv.workspace = true
futures.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
