[package]
name = "amp-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amp-builder.workspace = true
amp-common.workspace = true
amp-resolver.workspace = true
amp-resources.workspace = true
anyhow.workspace = true
async-nats.workspace = true
async-trait.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
